# von-neumann

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-DOCS  Makefile  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_NOTICES  dispositions-SPEC.md  propellant-SPEC.md  reliability-SPEC.md  shielding-SPEC.md  thermal-SPEC.md
assembly/: README.md  REFERENCES.md  pyproject.toml
assembly/src/assembly/: __init__.py  distributions.py  rate.py
assembly/tests/: test_distributions.py  test_invariants.py  test_rate.py
autonomy/: README.md  REFERENCES.md  pyproject.toml
autonomy/src/autonomy/: __init__.py  autonomy.py  distributions.py
autonomy/tests/: test_analytical_companions.py  test_autonomy.py  test_distributions.py
closure-sim/: README.md  REFERENCES.md  explainer.html  pyproject.toml
closure-sim/scenarios/: low_closure.yaml  lunar_regolith_seed.yaml
closure-sim/src/closure_sim/: __init__.py  analysis.py  cli.py  closure.py  distributions.py  models.py  paper_figures.py  replication.py  scenarios.py  structures.py
closure-sim/tests/: test_analysis.py  test_closure.py  test_distributions.py  test_invariants.py  test_replication.py  test_structures.py
comms/: README.md  REFERENCES.md  pyproject.toml
comms/src/comms/: __init__.py  distributions.py  link.py
comms/tests/: test_distributions.py  test_link.py
core/: README.md  REFERENCES.md  pyproject.toml
core/src/vn_core/: __init__.py  linalg.py  rng.py
core/tests/: test_edge_coverage.py  test_linalg.py  test_ode_dense_output.py  test_ode_implicit_internals.py  test_ode_trbdf2.py  test_ode_validation.py  test_pce.py  test_pce_apce.py  test_pce_regression.py  test_pce_sparse.py  test_qmc_cv.py  test_repo_wide_uq_coverage.py  test_rng.py  test_sequences.py  test_sobol_indices.py  test_sobol_sampler.py  test_sobol_second_order.py  test_uq_smoke.py  test_uq_unified.py
core/tests/rng_js_fixture/: fixture.json  gen.mjs
isru/: README.md  REFERENCES.md  pyproject.toml
isru/src/isru/: __init__.py  closure.py  distributions.py  energy.py
isru/tests/: test_closure.py  test_distributions.py  test_energy.py
launch-economics/: README.md  REFERENCES.md  pyproject.toml
launch-economics/src/launch_economics/: __init__.py  distributions.py  economics.py  from_closure.py  launch.py  value.py
launch-economics/tests/: test_analytical_companions.py  test_distributions.py  test_economics.py  test_from_closure.py  test_launch.py  test_tsiolkovsky_companion.py  test_uq_integration.py  test_value.py
mission/: README.md  REFERENCES.md  pyproject.toml
mission/src/mission/: __init__.py  distributions.py  run.py  scenario.py
mission/tests/: test_distributions.py  test_invariants.py  test_mission.py
multi-probe/: README.md  REFERENCES.md  pyproject.toml
multi-probe/src/multi_probe/: __init__.py  distributions.py  fleet.py  models.py  rng.py
multi-probe/tests/: test_distributions.py  test_fleet.py  test_invariants.py  test_self_stabilization.py
power-budget/: README.md  REFERENCES.md  pyproject.toml
power-budget/src/power_budget/: __init__.py  budget.py  distributions.py  physics.py
power-budget/tests/: test_budget.py  test_distributions.py  test_invariants.py  test_physics.py
power-source/: README.md  REFERENCES.md  pyproject.toml
power-source/src/power_source/: __init__.py  distributions.py  power_source.py
power-source/tests/: test_analytical_companions.py  test_distributions.py  test_power_source.py
probe-sim/: README.md  REFERENCES.md  pyproject.toml
probe-sim/scripts/: uq_bisection_range.py  uq_probe_range.py
probe-sim/src/probe_sim/: __init__.py  autonomy.py  distributions.py  environment.py  models.py  range.py
probe-sim/tests/: test_autonomy.py  test_distributions.py  test_environment.py  test_models.py  test_range.py  test_uq_distributions.py  test_uq_redhat.py  test_uq_report.py  test_uq_sample.py  test_uq_sobol.py
propellant/: README.md  REFERENCES.md  pyproject.toml
propellant/src/propellant/: __init__.py  distributions.py  propellant.py
propellant/tests/: test_distributions.py  test_propellant.py
reliability/: README.md  REFERENCES.md  pyproject.toml
reliability/src/reliability/: __init__.py  aurora.py  degradation.py  distributions.py  mortality.py  rng.py
reliability/tests/: test_aurora_analytical.py  test_distributions.py  test_invariants.py  test_reliability.py  test_rng.py
scripts/: README.md  depgraph.py  pyproject.toml  test-all.sh  test_depgraph.py
shielding/: README.md  REFERENCES.md  pyproject.toml
shielding/src/shielding/: __init__.py  distributions.py  (+2 more)
shielding/tests/: test_distributions.py  test_shielding.py
spine/: README.md  REFERENCES.md  SCRUTINY.md  pyproject.toml
spine/experiments/: __init__.py  measure.py  paper_figures.py
spine/tests/: test_clock_audit.py  test_distributions.py  test_invariants.py  test_measure_results.py  test_spine.py
swarm/: README.md  REFERENCES.md  pyproject.toml  scratch_sweep.py
swarm/experiments/: ANALYTICAL_BOUNDS.md  SPEC_P2_LADDER.md  SPEC_PLATEAU_LOCATOR.md  _run.py  bench_flat_kdtree.py  bench_flat_kdtree_leaf.py  bench_flat_run_fill.py  dt_artifact.py  finite_size.py  lightspeed_coordination.py  measure.py  paper_figures.py  scaling_benchmark.py  stats_util.py  validation.py
swarm/rust/: Cargo.toml  README.md  SPEC_FLAT_KDTREE.md  pyproject.toml
swarm/tests/: test_coordination_tax_analytical.py  test_distributions.py  test_flat_kdtree_oracle.py  test_flat_run_fill_oracle.py  test_invariants.py  test_kdtree_backends.py  test_kdtree_oracle.py  test_measure_results.py  test_probe_reuse.py  test_rust_fill_loop.py  test_seed_slice.py  test_self_stabilization.py  test_stats_util.py  test_swarm.py  test_winst_locator.py
thermal/: README.md  REFERENCES.md  pyproject.toml
thermal/tests/: test_analytical_companions.py  test_distributions.py  test_invariants.py  test_thermal.py
transfer/: README.md  REFERENCES.md  pyproject.toml
transfer/tests/: test_distributions.py  test_invariants.py  test_low_thrust.py  test_orbits.py
(+170 files in other folders)
