[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "assembly"
version = "0.1.0"
description = "Robotic build rate derived from published metal-AM deposition rates and OEE - retires closure-sim's hand-set ~20 kg/day and derives the fleet doubling clock (with the 12-274 kg/day uncertainty band)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
