[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "closure-sim"
version = "0.1.0"
description = "Quantitative closure & self-replication analysis for in-situ space factories"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "pyyaml>=6.0",
    "rich>=13.0",
    "vn-core",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "matplotlib>=3.8"]

[project.scripts]
closure-sim = "closure_sim.cli:app"

# Sibling packages in this monorepo, consumed through their public APIs.
[tool.uv.sources]
vn-core = { path = "../core", editable = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
