[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "comms"
version = "0.1.0"
description = "Deep-space downlink data rate vs distance (min(k/d^2, R_max)) and the data-return wall: probes generate bits faster than a 1/d^2 link returns them"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
