[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vn-core"
version = "0.1.0"
description = "Shared core primitives for the von-neumann repo. Currently: seeded mulberry32 RNG (byte-identical to the JS mirror), uncertainty quantification (distributions, seeded Monte Carlo, Sobol total-order sensitivity), and an ODE solver. Pure Python today; the layout leaves room for a future core/ rust/pyo3 speed drop-in without moving imports."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
# scipy is a TEST-ONLY oracle for the ODE validation gate (issue #38): we compare
# vn_core.ode against scipy.integrate.solve_ivp. It is never a runtime dependency
# - vn-core itself stays `dependencies = []` and pure Python.
dev = ["pytest>=8.0", "scipy>=1.11"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
