[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "launch-economics"
version = "0.1.0"
description = "The economics of not launching mass: launch cost, the rocket-equation Δv penalty, and the launch-mass leverage of a self-replicating seed"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "closure-sim",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

# closure-sim is a sibling module in this monorepo, consumed through its public API.
[tool.uv.sources]
closure-sim = { path = "../closure-sim", editable = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
