[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-probe"
version = "0.1.0"
description = "A small, deterministic fleet of self-replicating probes — the intermediate step between the single probe and the swarm (seeded, speculate-exact)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "closure-sim",
    "probe-sim",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

# Sibling modules in this monorepo, consumed only through their public APIs (CLAUDE.md §4).
[tool.uv.sources]
closure-sim = { path = "../closure-sim", editable = true }
probe-sim = { path = "../probe-sim", editable = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
