[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "power-budget"
version = "0.1.0"
description = "Power budgets for autonomous space factories: how a watt is split between making things and thinking, floored by the physics of computation"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "vn-core",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.uv.sources]
vn-core = { path = "../core", editable = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
