[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "power-source"
version = "0.1.0"
description = "Solar vs fission vs RTG: the distance crossover d = sqrt(sp_solar/sp_nuclear) ~4-5 AU, the power-level crossover, and the Pu-238 vitamin wall; calls thermal for reactor radiator mass"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "probe-sim",
    "thermal",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

# Sibling modules in this monorepo, consumed through their public APIs.
[tool.uv.sources]
probe-sim = { path = "../probe-sim", editable = true }
thermal = { path = "../thermal", editable = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
