[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "probe-sim"
version = "0.1.0"
description = "A single self-replicating probe: solar-electric power vs heliocentric distance, and the range it gates (after Borgue & Hein 2020)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "closure-sim",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

# closure-sim is a sibling module in this monorepo, consumed through its public API.
[tool.uv.sources]
closure-sim = { path = "../closure-sim", editable = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
