[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "probe-sim"
version = "0.1.0"
description = "A single self-replicating probe: solar-electric power vs heliocentric distance, and the range it gates (after Borgue & Hein 2020)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "closure-sim",
    "power-budget",
    "vn-core",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

# Sibling modules in this monorepo, consumed through their public APIs.
[tool.uv.sources]
closure-sim = { path = "../closure-sim", editable = true }
power-budget = { path = "../power-budget", editable = true }
vn-core = { path = "../core", editable = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
