[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reliability"
version = "0.1.0"
description = "Degradation and mortality: deterministic array/dose decay, a SEEDED-fold per-day hazard model, and the Aurora steady-state X_eq = 1 - T_l/T_s (Carroll-Nellenback 2019)"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "shielding",
    "vn-core",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

# Sibling modules in this monorepo, consumed through their public APIs.
[tool.uv.sources]
shielding = { path = "../shielding", editable = true }
vn-core = { path = "../core", editable = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
