[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "shielding"
version = "0.1.0"
description = "Radiation shielding mass from areal-density attenuation: monotonic TID electronics shielding, the non-monotonic GCR dose minimum, and local regolith that RAISES closure - plus the shared radenv primitive"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
