[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "swarm"
version = "0.1.0"
description = "A deterministic interstellar settlement front (ROADMAP §4, slice 1): probes spread star-to-star through a seeded field; how fast the reachable galaxy fills"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "vn-core",
    "numba>=0.66.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "matplotlib>=3.8"]
# Rust fast path (issue #33, Phase 1). Optional at runtime - swarm/sim.py's
# backend routing skips the Rust kernel if `swarm_rust` fails to import - so a
# checkout without Rust toolchain still runs. `uv run --extra rust maturin
# develop --manifest-path rust/Cargo.toml` builds and installs it.
rust = ["maturin>=1.7"]

[tool.uv.sources]
vn-core = { path = "../core", editable = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# The swarm package is a src layout (installed), but experiments/ is a namespace package at
# the module root, invoked as `python -m experiments.x`. Put the root on the path so tests
# can import experiments.stats_util the same way the experiments import each other.
pythonpath = ["."]
