[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "thermal"
version = "0.1.0"
description = "Heat rejection and radiator sizing (Stefan-Boltzmann): radiator area and mass into closure-sim's BOM, the T^4 leverage of hot radiators, and the parasitic solar-load distance story"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.6",
    "probe-sim",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

# Sibling modules in this monorepo, consumed through their public APIs.
[tool.uv.sources]
probe-sim = { path = "../probe-sim", editable = true }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
